# red

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  buffer.cpp  buffer.hpp  gap_buffer.cpp  gap_buffer.hpp  iterator.hpp  main.cpp
include/: buffer.h  command.h  display.h  editor.h  file.h  gap_buffer.h  input.h  iterator.h  prompt.h  screen.h  utility.h
src/: buffer.cpp  command.cpp  display.cpp  file.cpp  gap_buffer.cpp  gap_buffer.test.cpp  input.cpp  iterator.cpp  main.cpp  prompt.cpp  red.natvis  screen.cpp
